<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:theme="@style/Theme.HabitTracker.style"
    tools:context=".ui.add_habit.AddRegularHabit">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <EditText
                android:id="@+id/etHabitName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="Habit name"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.057"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnSaveHabit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="160dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/transparent"
                android:text="Save"
                android:textAllCaps="true"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/etHabitName"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/tvRegularHabit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:hint="@string/regular_habit_text"
            android:textColorHint="@color/secondary_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etHabitName" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clIcon"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/area_background_curved"
            app:layout_constraintTop_toBottomOf="@+id/tvRegularHabit"
            tools:layout_editor_absoluteX="0dp">


            <ImageButton
                android:id="@+id/ivIcon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/health_services" />

            <Button
                android:id="@+id/btnIcon"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="100dp"
                android:background="@android:color/transparent"

                android:text="Icon"
                android:textAlignment="viewStart"
                app:layout_constraintStart_toEndOf="@+id/ivIcon"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnColor"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="100dp"
                android:layout_marginTop="4dp"
                android:background="@android:color/transparent"
                android:text="Color"
                android:textAlignment="viewStart"
                app:layout_constraintStart_toEndOf="@+id/ivIcon"
                app:layout_constraintTop_toBottomOf="@+id/btnIcon" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvRepeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:hint="@string/repeat_hint"
            android:textAllCaps="true"
            android:textColorHint="@color/secondary_text" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clRepeat"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:background="@drawable/area_background_curved"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRepeat">

            <Button
                android:id="@+id/btnHabitDays"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:background="@android:color/transparent"
                android:text="Habit days"
                android:textAlignment="viewStart"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="-4dp" />

            <TextView
                android:id="@+id/tvRepeatDays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="296dp"
                android:text="Everyday"
                android:textColor="@color/secondary_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.483" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clDoItAt"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clRepeat">

            <TextView
                android:id="@+id/tvDoItAtHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/do_it_at_text"
                android:textAllCaps="true"
                android:textColor="@color/secondary_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnAnytime"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="44dp"
                android:background="@drawable/custom_rectangle_button"
                android:backgroundTint="@color/dark_gray"
                android:text="Anytime"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnAfternoon"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="116dp"
                android:background="@drawable/custom_rectangle_button"
                android:text="Afternoon"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnMorning"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="248dp"
                android:layout_marginTop="44dp"
                android:background="@drawable/custom_rectangle_button"
                android:text="Morning"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnEvening"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="248dp"
                android:layout_marginTop="116dp"
                android:background="@drawable/custom_rectangle_button"
                android:text="Evening"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daily_goal_text"
            android:textAllCaps="true"
            android:textColor="@color/secondary_text" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clDailyGoal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="1dp"
            android:layout_margin="10dp"
            android:background="@drawable/area_background_curved"
            tools:layout_editor_absoluteY="530dp">

            <Button
                android:id="@+id/btnGoal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="Goal"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="10dp" />

            <TextView
                android:id="@+id/tvGoal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Off"
                android:textColor="@color/secondary_text"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.92"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.506" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Reminder"
            android:textAllCaps="true"
            android:textColor="@color/secondary_text" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:background="@drawable/area_background_curved"
            android:layout_height="wrap_content">

            <Switch
                android:id="@+id/swReminder"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="      Reminder for this habit"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:id="@+id/btnReminderTime"
                android:background="@android:color/transparent"
                android:text="20:30"
                android:visibility="gone"
                app:flow_verticalBias="0.52"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/swReminder"/>
        </androidx.constraintlayout.widget.ConstraintLayout>




    </LinearLayout>
</ScrollView>